# Time-Manager

./: CMakeLists.txt  LICENSE.md  README.md
TimeSheet/: app_entry.cpp  config.h
TimeSheet-API/api/: defines.h
TimeSheet-API/api/core/database_system/: db_sys.cpp  db_sys.h
TimeSheet-API/api/core/login_system/: login_sys.cpp  login_sys.h
TimeSheet-API/api/core/ranking_system/: ranking_sys.cpp  ranking_sys.h
TimeSheet-API/api/driver/: API_driver.cpp  API_driver.h
TimeSheet-API/api/utils/files/: File_Manager.h  file_util.h
TimeSheet-API/api/utils/files/csv/: csv_loaders.cpp  csv_loaders.h  csv_saver.h
TimeSheet-API/api/utils/log/: Log.h
TimeSheet-API/api/utils/misc/: basic_str_parser.h  finder.h  random_rework.h  string_conv.h
TimeSheet-API/api/utils/time/: Date.h  Time.h  Timer.h
TimeSheet/dlgs/: dashboard_dlg.cpp  dashboard_dlg.h  login_dlg.cpp  login_dlg.h  newDay_dlg.cpp  newDay_dlg.h
TimeSheet/panels/: timesheet_view.cpp  timesheet_view.h
data/: cred.info  settings.info
testing/: entries.csv  time_test.cpp
ui-designs/: login-ui.vsdx
